<resources>
    <string name="app_name">Segunda Entrega DAM</string>
    <string name="bienvenido_al_club">Bienvenido al Club</string>
    <string name="usuario">Usuario</string>
    <string name="ingrese_su_usuario">Ingrese su usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingres_tu_contrase_a">Ingresá tu contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="repetir_contraseña">Repetir la contraseña</string>
    <string name="crear_cuenta">Crear cuents </string>
    <string name="confirmar">Confirmar </string>
    <string name="Registro_exitoso">Registro exitoso</string>
    <string name="Registro_erroneo">Registro erroneo</string>
    <string name="ir_a_la_pagina_principal">Página principal</string>
    <string name="actividades">Inscribir en Actividad</string>
    <string name="cuotas">Abonar Cuota</string>
    <string name="seleccionar_cliente">Socios con cuota vencida</string>
    <string name="registrar_cliente">Registrar Cliente</string>
    <string name="registro_cliente">Formulario de registro</string>
    <string name="nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="Documento">Número de documento</string>
    <string name="FechaNacimiento">Fecha de Nacimiento</string>
    <string name="es_socio">¿Es socio?</string>
    <string name="confirmarnuevoregistro">Confirmar registro</string>
    <string name="fichaMedica">Adjuntar ficha</string>
    <string name="ir_a_actividades">Ver las actividades</string>
    <string name="boton_volver_intentar">Volver a Intentar</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="abonar_actividad">Abonar actividad</string>
    <string name="presento_ficha">¿Presentó ficha?</string>
    <string name="error_nuevo_cliente">Registro de Nuevo Cliente erróneo</string>
    <string name="error_login">Error al Iniciar Sesión</string>
    <string name="Listado_Socios">Socios con deuda</string>
    <string name="nombre_socio">Nombre del socio: </string>
    <string name="Deuda">Deuda $:</string>
    <string name="Seleccione_un_cliente">Seleccione un cliente</string>
    <string name="ingrese_DNi_socio">DNI del cliente</string>
    <string name="BuscarSocio">Buscar Cliente</string>
    <string name="datos_del_socio">Datos del cliente:</string>
    <string name="Pagar">Pagar</string>
    <string name="ver_horarios">Ver Horarios</string>
    <string name="pagar_actividad">Pagar Actividad</string>
    <string name="registro_o_pago_exitoso">Registro o Pago exitoso</string>
    <string name="Error_al_registrarse">Error al registrarse</string>
    <string name="Volver_a_intentar">Volver a intentar</string>
</resources>