<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ef8732"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logoPrincipal"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/sport_logo_app"
        app:tint="@color/blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"/>

    <TextView
        android:id="@+id/idNombreUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tx_grande"
        android:text="@string/usuario"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/logoPrincipal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/ingrese_su_usuario"
        android:inputType = "text"
        android:backgroundTint="#3d5da2"
        app:layout_constraintTop_toBottomOf="@id/idNombreUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/idClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tx_grande"
        android:text="@string/contrase_a"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/editTextUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/ingres_tu_contrase_a"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/idClave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp" />

<!--btn Login-->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesi_n"
        android:textSize="@dimen/tx_medio"
        android:backgroundTint="#3d5da2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/editTextPassword" />

<!--    btn para registrarse-->
    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#3d5da2"
        android:text="@string/registrarse"
        android:textSize="@dimen/tx_medio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        />


</androidx.constraintlayout.widget.ConstraintLayout>