<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ef8732"
    tools:context=".Registrarse">

    <ImageView
        android:id="@+id/logoPrincipal"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/sport_logo_app"
        app:tint="@color/blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"/>

    <!--    usuario-->
    <TextView
        android:id="@+id/idNombreUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tx_grande"
        android:text="@string/usuario"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoPrincipal"
        />

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/ingrese_su_usuario"
        android:backgroundTint="#3d5da2"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/idNombreUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

<!--    contraseña-->
    <TextView
        android:id="@+id/idClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tx_grande"
        android:text="@string/contrase_a"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/editTextUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/ingres_tu_contrase_a"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/idClave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp" />

<!--    repetir contraseña-->
    <TextView
        android:id="@+id/idRepetirClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/repetir_contraseña"
        android:labelFor="@id/editRepetirPassword"
        android:textSize="@dimen/tx_grande"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword" />

    <EditText
        android:id="@+id/editRepetirPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="Repetir la contraseña"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/idRepetirClave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnConfirmar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="#3d5da2"
        android:text="@string/confirmar"
        android:textSize="@dimen/tx_medio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editRepetirPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>