<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#ef8732"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".principal">

    <ImageView
        android:id="@+id/logoPrincipal"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/sport_logo_app"
        app:tint="@color/blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnActividades"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"/>

<!--    btnActividades-->
    <Button
        android:id="@+id/btnActividades"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#3d5da2"
        android:text="@string/actividades"
        android:textSize="@dimen/tx_grande"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoPrincipal" />

<!--    btnCuotas-->
    <Button
        android:id="@+id/btnAbonarCuota"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#3d5da2"
        android:text="@string/cuotas"
        android:textSize="@dimen/tx_grande"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnActividades" />


<!--    btnSeleccionarCliente-->
    <Button
        android:id="@+id/btnSeleccionarCliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#3d5da2"
        android:text="@string/seleccionar_cliente"
        android:textSize="@dimen/tx_grande"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAbonarCuota" />

<!--    btnRegistro de clientes-->
    <Button
        android:id="@+id/btnRegistrarCliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#3d5da2"
        android:text="@string/registrar_cliente"
        android:textSize="@dimen/tx_grande"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSeleccionarCliente" />

<!--    btnAtras-->
    <Button
        android:id="@+id/btnCerrarSesion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#3d5da2"
        android:text="@string/cerrar_sesion"
        android:textSize="@dimen/tx_grande"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRegistrarCliente" />















</androidx.constraintlayout.widget.ConstraintLayout>