<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ef8732"
    android:padding="32dp"
    tools:context=".Feedback_Registro">

    <!--Logo app-->
    <ImageView
        android:id="@+id/logoPrincipal"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/sport_logo_app"
        app:tint="@color/blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"/>


    <TextView
        android:id="@+id/textRegistroKo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_nuevo_cliente"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/tx_muy_grande"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoPrincipal"
        android:layout_marginTop="48dp"/>

    <!--Logo error-->
    <ImageView
        android:id="@+id/logoError"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/baseline_error_circle_outline_24"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textRegistroKo"
        app:tint="@color/blue" />


    <!--Btn Intentar-->
    <Button
        android:id="@+id/btnVolverIntentar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#3d5da2"
        android:text="@string/boton_volver_intentar"
        android:textSize="@dimen/tx_medio"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoError" />

    <!--Btn Volver-->
    <Button
        android:id="@+id/btnIrPrincipal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#3d5da2"
        android:text="@string/ir_a_la_pagina_principal"
        android:textSize="@dimen/tx_medio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnVolverIntentar"/>



</androidx.constraintlayout.widget.ConstraintLayout>